# Travel-website

./: .dockerignore  .env.example  .gitignore  API_README.md  CLAUDE.md  CREWAI_CONVERSION.md  LANGCHAIN_CONVERSION.md  LANGCHAIN_QUICKSTART.md  README.md  SETUP_GUIDE.md  SUCCESS_SUMMARY.md  WORKFLOW_DESIGN.md  WORKFLOW_SUMMARY.md  config.yaml  crewai_config_agents.yaml  crewai_config_tasks.yaml  crewai_orchestrator.py  docker-compose.yml  langchain_implementation.py  langgraph_implementation.py  langsmith_integration.py  orchestrator.py  pyproject.toml  requirements.txt  response.json  run_agents.py  start_api.sh  test_aesthetic_direct.py  test_api_correct.py  test_api_response.py  test_full_pipeline.py  test_quick.py  vacation_analysis.csv
agents/: __init__.py  aesthetic_assessment.py  caption_generation.py  duplicate_detection.py  filtering_categorization.py  metadata_extraction.py  quality_assessment.py  website_generation.py
api/: fastapi_server.py
batch-run-photo-json2csv/: README.md  main.py  requirements.txt
crewai_tools/: caption_tool.py  filtering_tool.py
docker/: api.Dockerfile  mcp.Dockerfile
docs/: ACTIVITY_DIAGRAM.md  API_INTEGRATION_OPTIONS.md  API_KEY_GUIDE.md  API_QUICKSTART.md  API_README.md  BATCH_PROCESSING.md  DOCKER_DEPLOYMENT.md  FASTAPI_SETUP.md  GEMINI.md  HLD.md  LLD.md  MCP_SETUP.md  QUICKSTART.md  SETUP_GUIDE.md  SUCCESS_SUMMARY.md  TOKEN_OPTIMIZATION.md  UML_DIAGRAMS.md
examples/: api_client_example.py
langchain-ecosystem/: README.md  langchain_implementation.py  langgraph_implementation.py  langsmith_integration.py
mcp/: photo_analysis_server.py
no-framework/: README.md
no-framework/agents/: __init__.py  quality_assessment.py
no-framework/utils/: helpers.py  validation.py
sample_images/: .gitkeep
scripts/: generate_api_key.sh  setup_api.sh  setup_claude_mcp.sh  setup_mcp.sh  start_api.sh  test_api_server.sh  test_mcp.sh
test_results/: health_20251222_204432.json  request_20251222_204432.json  response_20251222_204432.json
tests/: test_aesthetic_direct.py  test_api.py  test_api_correct.py  test_api_response.py  test_full_pipeline.py  test_mcp.py  test_path_normalization.py  test_quick.py  verify_tier1.py
travel_photo_tools/: __init__.py  aesthetic_tool.py  caption_tool.py  filtering_tool.py  metadata_tool.py  quality_tool.py
utils/: __init__.py  heic_reader.py  logger.py  reverse_geocoding.py  token_tracker.py
web_app/: app.py
web_app/templates/: base.html  index.html  report.html
